--- a/about.html
+++ b/about.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 
@@ -21,41 +22,42 @@
         <li>
             <a href="/about.html">About</a>
         </li>
-        <h1>About</h1>
+    </ul>
+    <h1>About</h1>
 
-        <table>
-            <caption>Opening hours</caption>
-            <thead>
-                <tr>
-                    <th>Day</th>
-                    <th>Open</th>
-                    <th>Close</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Monday - Friday</td>
-                    <td>09:00</td>
-                    <td rowspan="2">21:00</td>
-                </tr>
-                <tr>
-                    <td>Saturday</td>
-                    <td>10:00</td>
-                </tr>
-                <tr>
-                    <td>Sunday</td>
-                    <td colspan="2">closed</td>
-                </tr>
-            </tbody>
-            <tfoot>
-                <tr>
-                    <td colspan="3">
-                        &copy; 2019
-                    </td>
-                </tr>
-            </tfoot>
-        </table>
-
+    <table>
+        <caption>Opening hours</caption>
+        <thead>
+            <tr>
+                <th>Day</th>
+                <th>Open</th>
+                <th>Close</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Monday - Friday</td>
+                <td>09:00</td>
+                <td rowspan="2">21:00</td>
+            </tr>
+            <tr>
+                <td>Saturday</td>
+                <td>10:00</td>
+                
+            </tr>
+            <tr>
+                <td>Sunday</td>
+                <td colspan="2">closed</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td colspan="3">
+                    &copy;2022
+                </td>
+            </tr>
+        </tfoot>
+    </table>
 </body>
 
 </html>
