--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Egy szuper oldal</title>
 </head>
@@ -50,6 +51,7 @@
     <a href="pages/orders.html">Orders</a>
     <a target="blank" href="https://www.tasteofhome.com/recipes/barbecued-burgers/">
         <img width="56" src="img/burger.jpg" alt="tasty burger">
+
     </a>
 
 </body>
