--- a/pages/orders.html
+++ b/pages/orders.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-
 <body>
     <ul>
         <li>
@@ -21,8 +20,8 @@
         <li>
             <a href="/about.html">About</a>
         </li>
-        <h1>Orders</h1>
-        <a href="/pages/products.html">Products</a>
+    </ul>
+    <h1>Orders</h1>
+    <a href="/pages/orders.html">Orders</a>
 </body>
-
 </html>
